# mnxb

./: .codeql-prebuild-cpp-Linux.sh  .codeql-prebuild-cpp-Windows.sh  .codeql-prebuild-cpp-macOS.sh  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh
.github/workflows/: ci.yml
cmake/modules/: FindNXDK.cmake  GetOpenSSL.cmake  XBEUtils.cmake
src/: main.cpp  os.h
src/nxdk/: windows.h
src/nxdk/hal/: debug.h  video.h  xbox.h
tests/: CMakeLists.txt
